feature(todo): add search todo item
