# src/routes/index.js
@@ -2,12 +2,14 @@ import express from 'express';
 import { NOT_FOUND, OK } from 'http-status';
 import AuthRoute from './auth.route';
 import TodoRoute from './todo.route';
+import SearchRoute from './search.route';
 import ResponseService from '../services/response.service';
 
 const routes = express();
 
 routes.use('/api/auth', AuthRoute);
 routes.use('/api/todo', TodoRoute);
+routes.use('/api/search', SearchRoute);
 
 routes.get('/', (req, res) => {
 	ResponseService.setSuccess(OK, 'To Do API');
