# src/routes/search.route.js
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import authorization from '../middlewares/autorization.middleware';
+import TodoController from '../controller/todo.controller';
+
+const router = Router();
+
+router.get('/', authorization, TodoController.searchTodoItem);
+
+export default router;
